{
  "version": 4,
  "terraform_version": "1.15.8",
  "serial": 23,
  "lineage": "8e9d9c32-e26f-4af8-ea79-5468fa40516b",
  "resources": [
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:406207085797:loadbalancer/app/kafka-stack-alb/aea10c113458df07",
            "arn_suffix": "app/kafka-stack-alb/aea10c113458df07",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "kafka-stack-alb-1557440976.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:406207085797:loadbalancer/app/kafka-stack-alb/aea10c113458df07",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "kafka-stack-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-00a3417a3ab9a3bfa"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0409147197ee4a732"
              },
              {
                "subnet_id": "subnet-0ff888067f0c51f34"
              }
            ],
            "subnets": [
              "subnet-0409147197ee4a732",
              "subnet-0ff888067f0c51f34"
            ],
            "tags_all": {
              "ManagedBy": "terraform",
              "Project": "kafka-stack",
              "Stage": "01-network"
            },
            "vpc_id": "vpc-0ed1fb3a252350214",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.alb.aws_security_group.alb",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:406207085797:listener/app/kafka-stack-alb/aea10c113458df07/2d5c2abfcbd2ff33",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:406207085797:listener/app/kafka-stack-alb/aea10c113458df07/2d5c2abfcbd2ff33",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:406207085797:loadbalancer/app/kafka-stack-alb/aea10c113458df07",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {
              "ManagedBy": "terraform",
              "Project": "kafka-stack",
              "Stage": "01-network"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.alb.aws_lb.this",
            "module.alb.aws_security_group.alb",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:406207085797:security-group/sg-00a3417a3ab9a3bfa",
            "description": "Public entry point",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00a3417a3ab9a3bfa",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "kafka-stack-alb",
            "name_prefix": "",
            "owner_id": "406207085797",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "kafka-stack-alb"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "kafka-stack-alb",
              "Project": "kafka-stack",
              "Stage": "01-network"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ed1fb3a252350214"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ae89adf019c6d5b2",
            "arn": "arn:aws:ec2:us-east-1:406207085797:elastic-ip/eipalloc-0ae89adf019c6d5b2",
            "domain": "vpc",
            "id": "eipalloc-0ae89adf019c6d5b2",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-52-200-106-36.compute-1.amazonaws.com",
            "public_ip": "52.200.106.36",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "kafka-stack-nat-eip"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "kafka-stack-nat-eip",
              "Project": "kafka-stack",
              "Stage": "01-network"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:406207085797:internet-gateway/igw-06fa9014b0a3d2dd9",
            "id": "igw-06fa9014b0a3d2dd9",
            "owner_id": "406207085797",
            "tags": {
              "Name": "kafka-stack-igw"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "kafka-stack-igw",
              "Project": "kafka-stack",
              "Stage": "01-network"
            },
            "vpc_id": "vpc-0ed1fb3a252350214"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ae89adf019c6d5b2",
            "association_id": "eipassoc-0db7337f2b6d4cb57",
            "connectivity_type": "public",
            "id": "nat-03c249a23e0d35356",
            "network_interface_id": "eni-005dffcdcde68aa78",
            "private_ip": "10.0.0.8",
            "public_ip": "52.200.106.36",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0409147197ee4a732",
            "tags": {
              "Name": "kafka-stack-nat"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "kafka-stack-nat",
              "Project": "kafka-stack",
              "Stage": "01-network"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:406207085797:route-table/rtb-070a242017f29e581",
            "id": "rtb-070a242017f29e581",
            "owner_id": "406207085797",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-03c249a23e0d35356",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "kafka-stack-rt-private"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "kafka-stack-rt-private",
              "Project": "kafka-stack",
              "Stage": "01-network"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ed1fb3a252350214"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:406207085797:route-table/rtb-0e7e65e6b54f00f1b",
            "id": "rtb-0e7e65e6b54f00f1b",
            "owner_id": "406207085797",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06fa9014b0a3d2dd9",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "kafka-stack-rt-public"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "kafka-stack-rt-public",
              "Project": "kafka-stack",
              "Stage": "01-network"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ed1fb3a252350214"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06796cf998c109a7a",
            "route_table_id": "rtb-070a242017f29e581",
            "subnet_id": "subnet-08bd4e9d3c721d157"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-066d11fed51425a95",
            "route_table_id": "rtb-070a242017f29e581",
            "subnet_id": "subnet-01e12be6ede9b1ab2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-048734ca4fb498b45",
            "route_table_id": "rtb-0e7e65e6b54f00f1b",
            "subnet_id": "subnet-0409147197ee4a732"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e55c9d34d07fc2fd",
            "route_table_id": "rtb-0e7e65e6b54f00f1b",
            "subnet_id": "subnet-0ff888067f0c51f34"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:406207085797:subnet/subnet-08bd4e9d3c721d157",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08bd4e9d3c721d157",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "406207085797",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "kafka-stack-private-0",
              "Tier": "private"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "kafka-stack-private-0",
              "Project": "kafka-stack",
              "Stage": "01-network",
              "Tier": "private"
            },
            "vpc_id": "vpc-0ed1fb3a252350214"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:406207085797:subnet/subnet-01e12be6ede9b1ab2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01e12be6ede9b1ab2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "406207085797",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "kafka-stack-private-1",
              "Tier": "private"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "kafka-stack-private-1",
              "Project": "kafka-stack",
              "Stage": "01-network",
              "Tier": "private"
            },
            "vpc_id": "vpc-0ed1fb3a252350214"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:406207085797:subnet/subnet-0409147197ee4a732",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0409147197ee4a732",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "406207085797",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "kafka-stack-public-0",
              "Tier": "public"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "kafka-stack-public-0",
              "Project": "kafka-stack",
              "Stage": "01-network",
              "Tier": "public"
            },
            "vpc_id": "vpc-0ed1fb3a252350214"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:406207085797:subnet/subnet-0ff888067f0c51f34",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ff888067f0c51f34",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "406207085797",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "kafka-stack-public-1",
              "Tier": "public"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "kafka-stack-public-1",
              "Project": "kafka-stack",
              "Stage": "01-network",
              "Tier": "public"
            },
            "vpc_id": "vpc-0ed1fb3a252350214"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:406207085797:vpc/vpc-0ed1fb3a252350214",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0c6e7b30a56849dd8",
            "default_route_table_id": "rtb-047d76b0d9e365b43",
            "default_security_group_id": "sg-09d6addcd7d6a4a57",
            "dhcp_options_id": "dopt-0c245e0b2f28782f3",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ed1fb3a252350214",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-047d76b0d9e365b43",
            "owner_id": "406207085797",
            "tags": {
              "Name": "kafka-stack-vpc"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "kafka-stack-vpc",
              "Project": "kafka-stack",
              "Stage": "01-network"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}